--- a/Applied_Statistics.ipynb
+++ b/Applied_Statistics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8/j9+9DcRCN65jJ2Y6mAz",
+      "authorship_tag": "ABX9TyOYBino7cvNUZLYSwnDRJpq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,15 @@
       ],
       "metadata": {
         "id": "CT7Clw5kPowN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://github.com/Asthamukhia/Product-Dissection-for-swiggy/blob/main/Applied_Statistics.ipynb"
+      ],
+      "metadata": {
+        "id": "boMxl0wAcLpV"
       }
     },
     {
